--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "client": "npm start --prefix frontend",
-    "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false"
   },
   "author": "DANISH MEHMOOD",
   "license": "MIT",
