--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "colors": "^1.4.0",
     "dotenv": "^10.0.0",
     "email-templates": "^8.0.8",
