--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
