--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
