--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.7.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
