--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
-    "passport-facebook": "^3.0.0"
+    "passport-facebook": "^3.0.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
