--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "email-templates": "^8.0.8",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^6.14.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
