--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
+    "country-state-city": "^3.0.1",
     "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
     "email-templates": "^8.0.8",
