--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.0",
     "joi": "^17.5.0",
+    "jsonpath": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
