--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.1",
+    "census-csv-parser": "^1.0.5",
     "cloudinary": "^1.28.1",
     "colors": "^1.4.0",
     "connect-multiparty": "^2.2.0",
