--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.28.1",
     "colors": "^1.4.0",
     "connect-multiparty": "^2.2.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "country-state-city": "^3.0.1",
     "csvtojson": "^2.0.10",
@@ -34,6 +35,7 @@
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
