--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonpath": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
