--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "DANISH MEHMOOD",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.1",
